--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Simple JS App</title>
+    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico" />
     <link href="css/styles.css" rel="stylesheet" type="text/css" />
 </head>
 
