--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <h1>Pokedex!</h1>
-    <ul class="pokemon-list"></ul>"
+    <ul class="pokemon-list"></ul>
     <script src="js/scripts.js"></script>
 </body>
 
