--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 <body>
     <h1>Pokedex!</h1>
     <ul class="pokemon-list"></ul>
+    <script src="js/promise-polyfill.js"></script> <!-- https://github.com/taylorhakes/promise-polyfill promise polyfill 'new Promise(...)''-->
+    <script src="js/fetch.umd.js"></script> <!-- https://github.com/github/fetch fetch polyfill -->
     <script src="js/scripts.js"></script>
 </body>
 
