--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
 
 <body>
     <h1>Pokedex!</h1>
-    <ul class="pokemon-list"></ul>
+    
     <!-- add pokemon modal container -->
     <div id='modal-container'></div>
+    <ul id='show-modal' id='image-container' class="pokemon-list"></ul>
 
     <script src="js/promise-polyfill.js"></script> <!-- https://github.com/taylorhakes/promise-polyfill promise polyfill 'new Promise(...)''-->
     <script src="js/fetch.umd.js"></script> <!-- https://github.com/github/fetch fetch polyfill -->
