--- a/index.html
+++ b/index.html
@@ -13,44 +13,45 @@
 </head>
 
 <body>
-    <h1>Pokedex!</h1>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">
+            <img src="img/favicon-32x32.png" class="d-inline-block align-top" alt="Pokeball Logo">
+            Pokédex!
+        </a>
+        <!-- <form class="form-inline">
+            <input class="form-control form-control-sm" id="pokemon-search" type="search" placeholder="Search Pokémon" aria-label="Search for Pokemon">
+        </form> -->
+    </nav>
 
-    <!-- add pokemon modal container -->
-    <div class="list-container">
-        <ul class="pokemon-list list-group" data-toggle="modal" data-target="#exampleModal"></ul>
-    </div>
-      
-      <!-- Modal -->
-      <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </button>
+    <!-- Modal -->
+    <div class="modal fade" id="pokemonModal" tabindex="-1" role="dialog" aria-labelledby="pokemonModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="pokemonModalLabel">Modal title</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body" style="text-align: center;">
+                    ...
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
             </div>
-            <div class="modal-body">
-              ...
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-              <button type="button" class="btn btn-primary">Save changes</button>
-            </div>
-          </div>
         </div>
-      </div>
+    </div>
+
+    <!-- add pokemon modal container button -->
+    <ul id="pokemon-list" class="list-group"></ul>
 
 
-    <script src="js/promise-polyfill.js"></script>
-    <!-- https://github.com/taylorhakes/promise-polyfill promise polyfill new Promise(...)''-->
-    <script src="js/fetch.umd.js"></script> <!-- https://github.com/github/fetch fetch polyfill -->
-    <script src="js/scripts.js"></script>
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"
         integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-    <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
         integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
     </script>
@@ -58,6 +59,9 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
     </script>
 
+    <script src="js/promise-polyfill.js"></script> <!-- promise polyfill new Promise(...)''-->
+    <script src="js/fetch.umd.js"></script> <!-- fetch polyfill -->
+    <script src="js/scripts.js"></script>
 </body>
 
 </html>
