--- a/index.html
+++ b/index.html
@@ -14,13 +14,14 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">
-            <img src="img/favicon-32x32.png" class="d-inline-block align-top" alt="Pokeball Logo">
-            Pokédex!
-        </a>
-        <!-- <form class="form-inline">
-            <input class="form-control form-control-sm" id="pokemon-search" type="search" placeholder="Search Pokémon" aria-label="Search for Pokemon">
-        </form> -->
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">
+                <img src="img/favicon-32x32.png" class="d-inline-block align-top" alt="Pokeball Logo">Pokédex!</a>
+            <form class="d-flex">
+                <input class="form-control" id="pokemon-search" type="search" placeholder="Search Pokémon"
+                    aria-label="Search for Pokemon">
+            </form>
+        </div>
     </nav>
 
     <!-- Modal -->
@@ -45,9 +46,13 @@
     </div>
 
     <!-- add pokemon modal container button -->
-    <ul id="pokemon-list" class="list-group"></ul>
-
-
+    <main class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="pokemon-list list-group"></div>
+            </div>
+        </div>
+    </main>
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"
