--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
@@ -18,7 +18,7 @@
             <a class="navbar-brand" href="#">
                 <img src="img/favicon-32x32.png" class="d-inline-block align-top" alt="Pokeball Logo">Pokédex!</a>
             <form class="d-flex">
-                <input class="form-control" id="pokemon-search" type="search" placeholder="Search Pokémon"
+                <input class="form-control form-control-sm" id="pokemon-search" type="search" placeholder="Search Pokémon"
                     aria-label="Search for Pokemon">
             </form>
         </div>
