--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             <a class="navbar-brand" href="#">
                 <img src="img/favicon-32x32.png" class="d-inline-block align-top" alt="Pokeball Logo">Pokédex!</a>
             <form class="d-flex">
-                <input class="form-control form-control-sm" id="pokemon-search" type="search" placeholder="Search Pokémon"
-                    aria-label="Search for Pokemon">
+                <input class="form-control form-control-sm" id="pokemon-search" type="search"
+                    placeholder="Search Pokémon" aria-label="Search for Pokemon">
             </form>
         </div>
     </nav>
