updated to minified code

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Boostrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link href="css/styles.css" rel="stylesheet" type="text/css" />
+    <link href="dist/css/styles.min.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
@@ -64,9 +64,9 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
     </script>
 
-    <script src="js/promise-polyfill.js"></script> <!-- promise polyfill new Promise(...)''-->
-    <script src="js/fetch.umd.js"></script> <!-- fetch polyfill -->
-    <script src="js/scripts.js"></script>
+    <script src="src/js/promise-polyfill.js"></script> <!-- promise polyfill new Promise(...)''-->
+    <script src="src/js/fetch.umd.js"></script> <!-- fetch polyfill -->
+    <script src="dist/js/scripts.min.js"></script>
 </body>
 
 </html>
